--- a/src/pages/partials/header.pug
+++ b/src/pages/partials/header.pug
@@ -1,9 +1,9 @@
 header
     .overlay-header
-    section.top-bar 
+    section.top-bar
         .container
             .top-bar-wrapper 
-                .top-bar-wrapper-item
+                h2.top-bar-wrapper-item
                     a(href="#").top-bar-wrapper-logotype Синема 
                         strong.top-bar-wrapper-strong Афиша
                 nav.top-bar-wrapper-item.menu-wrap
