--- a/src/scss/sections/faq.scss
+++ b/src/scss/sections/faq.scss
@@ -15,7 +15,7 @@
         margin: 0 auto;
         margin-top: 70px;
         &-item {
-            background: #F6F7FA;
+            background: #e5e5e5;
             margin-top: 20px;
             padding: 10px 20px;
             border-radius: 18px;
