--- a/src/pages/partials/scripts.pug
+++ b/src/pages/partials/scripts.pug
@@ -1,2 +1,2 @@
-script(src="https://unpkg.com/swiper/swiper-bundle.min.js" defer)
+script(src="https://unpkg.com/swiper/swiper-bundle.min.js")
 script(src='js/main.js')
