--- a/src/pages/partials/head.pug
+++ b/src/pages/partials/head.pug
@@ -1,7 +1,7 @@
 head
     meta(charset='utf-8')
     title Start 
-    link(href='css/style.css', rel="stylesheet")
+    link(href='css/style.min.css', rel="stylesheet")
     link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     link(rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css")
